name:                extended-containers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konsumlamm/extended-containers#readme
license:             BSD3
license-file:        LICENSE
author:              konsumlamm
maintainer:          konsumlamm@gmail.com
copyright:           2019 konsumlamm
build-type:          Simple
extra-source-files:  README.md
category:            Data Structures
cabal-version:       >= 1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Heap
    Data.PrioHeap
    Data.Traversable.Utils
    Data.TrieVector
  other-modules:
    Data.Heap.Internal
    Data.PrioHeap.Internal
  ghc-options:         -O -Wall
  build-depends:       base >= 4.7 && < 5, vector
  default-language:    Haskell2010
