name:                extended-containers
version:             0.1.0.0
synopsis:            Heap and Vector container types
description:
  This package contains general-purpose implementations of various immutable container types
  including vectors, heaps and priority heaps.
homepage:            https://github.com/konsumlamm/extended-containers#readme
license:             BSD3
license-file:        LICENSE
author:              konsumlamm
maintainer:          konsumlamm@gmail.com
copyright:           2019 konsumlamm
build-type:          Simple
extra-source-files:  README.md
category:            Data Structures
cabal-version:       >= 1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:
    Data.AMT
    Data.Deque
    Data.Heap
    Data.PrioHeap
  other-modules:
    Data.Heap.Internal
    Util.Internal.StrictList
  ghc-options:         -O2 -Wall -Wno-name-shadowing -Wredundant-constraints
                       -Werror=unrecognised-pragmas -Werror=missing-fields -Werror=missing-methods -Werror=unrecognised-warning-flags
  build-depends:       base >= 4.7 && < 5, transformers, vector
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Wno-orphans
  build-depends:
    base >= 4.7 && < 5,
    extended-containers,
    hspec,
    QuickCheck
  default-language:    Haskell2010
